--- a/eventfinder.html
+++ b/eventfinder.html
@@ -28,7 +28,11 @@
 		</div>
 
 
-		<div id="results-table"></div>
+		<div id="results-table">
+			<div id="no-events">
+				There don't appear to be any events in your area - try a larger search area.
+			</div>
+		</div>
 
 
 
