Made it responsive
Now to add static Google maps for selected events on mobile view

--- a/eventfinder.html
+++ b/eventfinder.html
@@ -12,7 +12,8 @@
 </head>
 
 <body>
-
+	<div id="hidden-div"></div>
+	
 	<div id="main-area">
 		<div id="title-area">
 			<h1>Tech Event Finder</h1>
