--- a/eventfinder.html
+++ b/eventfinder.html
@@ -3,7 +3,7 @@
 <head>
 	<title>Tech Event Finder</title>
 
-	<meta name="viewport" content="initial-scale=1.0, user-scalable=no">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
 	<meta charset="utf-8">
 
 	<link href="https://fonts.googleapis.com/css?family=Quicksand" rel="stylesheet">
@@ -13,7 +13,7 @@
 
 <body>
 	<div id="hidden-div"></div>
-	
+
 	<div id="main-area">
 		<div id="title-area">
 			<h1>Tech Event Finder</h1>
@@ -52,14 +52,13 @@
 
 
 	<!-- scripts -->
-	<script type="text/javascript" src="moment.js"></script>
-	<script type="text/javascript" src="jquery-3.1.1.js"></script>
+	<script src="moment.js"></script>
+	<script src="jquery-3.1.1.js"></script>
 	<script src="gmaps.js"></script>
 	<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAcbBRzXhh1sikP5UczXtz9AcUybrOYVbc&libraries=places,geometry&callback=initMap" async></script>
 	<script src="adts.js"></script>
-	<script src="utilities.js"></script>
 	<script src="displayEvents.js"></script>
-	<script src="eventfinder.js"></script>
+	<script src="events.js"></script>
 	<script src="ui.js"></script>
 
 
